# redefmt

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  book.toml  cliff.toml  rustfmt.toml
crates/app/core/: Cargo.toml
crates/app/core/src/: dispatcher.rs  format.rs  identifiers.rs  lib.rs  statement_writer.rs
crates/app/core/src/base/: format.rs  mod.rs
crates/app/core/src/codec/: mod.rs  statement_hint.rs
crates/app/core/src/frame/: header.rs  level.rs  type_hint.rs
crates/app/core/src/identifiers/: mod.rs  short_id.rs
crates/app/core/src/logger/: global_dispatcher.rs  global_logger.rs
crates/app/core/src/write/: mod.rs  (+2 more)
crates/app/db/: Cargo.toml
crates/app/db/src/: migrations.rs  state_dir.rs  table.rs
crates/app/end_to_end/: Cargo.toml
crates/app/end_to_end/src/: lib.rs
crates/app/facade/: Cargo.toml
crates/app/facade/src/: lib.rs
crates/app/pretty_printer/: Cargo.toml
crates/app/pretty_printer/src/: lib.rs
crates/args/: Cargo.toml
crates/args/facade/tests/: mod.rs
crates/args/internal/: Cargo.toml
crates/args/internal/src/: format_expression.rs  quote_utils.rs  serde_utils.rs
crates/args/macros/: Cargo.toml
crates/args/src/: argument.rs  argument_register.rs  atoms.rs  error.rs  format_argument.rs  format_segment.rs  format_string.rs  identifier.rs  integer.rs  lib.rs  parameter.rs  parse.rs  serde_utils.rs
crates/args/src/args/: core.rs  mod.rs  name.rs  named.rs  positional.rs  value.rs
crates/args/src/format_options/: align.rs  core.rs  count.rs  mod.rs  precision.rs  sign.rs  trait.rs  width.rs
crates/args/src/format_string/: argument_register.rs  core.rs  mod.rs  parse.rs
crates/args/src/provided_args/: combined.rs  core.rs  mod.rs  named_map.rs  value.rs
crates/args/tests/: mod.rs
crates/args_internal/: Cargo.toml
crates/args_internal/src/: arg_capturer.rs  deferred_format_expression.rs  error.rs  format_argument.rs  format_expression.rs  format_literal.rs  format_segment.rs  format_string.rs  integer.rs  lib.rs  mapped_format_expression.rs  parse_error.rs  provided_args.rs  resolver.rs  serde_utils.rs
crates/args_internal/src/deferred/: as_value.rs  error.rs  expected_args.rs  expression.rs  mod.rs  provided_args.rs  resolved_options.rs  string.rs  value.rs
crates/args_internal/src/format_options/: align.rs  core.rs  count.rs  mod.rs  precision.rs  sign.rs  trait.rs
crates/args_internal/src/format_string/: argument.rs  core.rs  literal.rs  mod.rs  segment.rs
crates/args_internal/src/identifier/: any_identifier.rs  argument_identifier.rs  error.rs  identifier.rs  mod.rs  utils.rs
crates/args_internal/src/processor/: arg_capturer.rs  config.rs  core.rs  error.rs  internal.rs  mod.rs  provided_args.rs  string.rs
crates/args_internal/src/provided_args/: combined.rs  core.rs  deferred.rs  literal.rs  mapping.rs  mod.rs  named_map.rs  provided.rs  resolver.rs  value.rs
crates/args_internal/src/resolver/: arg_capturer.rs  config.rs  error.rs  internal.rs  mod.rs  provided.rs
crates/common/: Cargo.toml
crates/common/src/: documents.rs  frontmatter.rs  lib.rs  pointer_width.rs
crates/common/src/codec/: header.rs  length_hint.rs  mod.rs  pointer_width.rs  stamp.rs  type_hint.rs  write_content.rs
crates/common/src/identifiers/: mod.rs  short_id.rs
crates/common/src/value/: collection.rs  core.rs  primitive.rs
crates/core/: Cargo.toml
crates/core/src/: format.rs  lib.rs
crates/core/src/base/: dispatcher.rs  statement_writer.rs
crates/core/src/codec/: mod.rs
crates/core/src/deferred/: mod.rs
crates/core/src/logger/: global_dispatcher.rs  global_logger.rs  mod.rs  stamper.rs
crates/core/tests/: mod.rs
crates/core/tests/ui/: unions_not_supported.stderr
crates/database/: Cargo.toml
crates/database/src/: display_segment.rs  documents.rs  lib.rs  print_info.rs  write_content.rs
crates/database/src/documents/: mod.rs
crates/database/src/value/: collection.rs  core.rs  mod.rs  primitive.rs  type.rs
crates/db/: Cargo.toml  build.rs
crates/db/migrations/01-crate/: up.sql
crates/db/src/: client.rs  columns.rs  db_type.rs  lib.rs  short_id.rs  sql_utils.rs  state_dir.rs  table.rs  write_content.rs
crates/db/src/client/: mod.rs  state_dir.rs
crates/db/src/columns/: crate_name.rs  hash.rs  mod.rs  segment.rs  short_id.rs  type_structure.rs  write_statement.rs
crates/db/src/crate_table/: db_client.rs  mod.rs  name.rs  table.rs
crates/db/src/db/: krate.rs  main.rs  mod.rs
crates/db/src/documents/: mod.rs
crates/db/src/statement_table/: db_client.rs  gen_tests.rs  mod.rs  print.rs  segment.rs  stored_format_expression.rs  table.rs  type_structure.rs  write.rs
crates/db/src/table/: krate.rs  statement_table.rs  write_register.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: core.rs  crate_cache.rs  decoder_stage.rs  error.rs  frame.rs  frame_decoder.rs  lib.rs  list_context.rs  list_decoder.rs  print_statement_cache.rs  segment_context.rs  segment_decoder.rs  stage.rs  statement_cache.rs  stores.rs  type_structure_decoder.rs  utils.rs  value.rs  value_context.rs  value_decoder.rs  values.rs  write_statement_decoder.rs  write_statement_stage.rs
crates/decoder/src/cache/: combined.rs  krate.rs  mod.rs  statement.rs
crates/decoder/src/frame/: decoder.rs  item.rs  mod.rs  stage.rs
crates/decoder/src/sub_decoders/: list.rs  mod.rs  segment.rs  value.rs  write_statement.rs  write_statements.rs
crates/facade/: Cargo.toml
crates/facade/src/: lib.rs
crates/facade/tests/: mod.rs
crates/logger/: Cargo.toml
crates/logger/src/: dispatcher.rs  global_dispatcher.rs  global_logger.rs  global_registry.rs  global_stamper.rs  lib.rs  stamper.rs  write_primitive.rs  write_value.rs
crates/macros/: Cargo.toml
crates/macros/src/: db_client.rs  derive_format.rs  error.rs  lib.rs  print_statement.rs  statement_utils.rs  write_statement.rs
crates/pretty_printer/: Cargo.toml
crates/pretty_printer/src/: lib.rs
crates/printer/: Cargo.toml
crates/printer/src/: configuration.rs  lib.rs  pretty_printer.rs
crates/printer/src/configuration/: core.rs  mod.rs  stamp.rs
(+144 files in other folders)
