[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
edition = "2024"
exclude = ["/.github"]
license = "MPL v2.0"
readme = "README.md"
repository = "https://github.com/gibbz00/redefmt"
version = "0.1.0"

[workspace.dependencies]
redefmt-args = { path = "crates/args" }
redefmt-common = { path = "crates/common" }

[workspace.lints.rust]
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"
