[workspace]
members = ["crates/app/*", "crates/args/*", "crates/utils/*"]
resolver = "3"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
edition = "2024"
exclude = ["/.github"]
license = "MPL v2.0"
readme = "README.md"
repository = "https://github.com/gibbz00/redefmt"
version = "0.1.0"

[workspace.dependencies]
redefmt = { path = "crates/app/facade" }
redefmt-args = { path = "crates/args/facade" }
redefmt-args-internal = { path = "crates/args/internal" }
redefmt-args-macros = { path = "crates/args/macros" }
redefmt-core = { path = "crates/app/core" }
redefmt-db = { path = "crates/app/db" }
redefmt-decoder = { path = "crates/app/decoder" }
redefmt-macros = { path = "crates/app/macros" }
redefmt-utils-tupler = { path = "crates/utils/tupler" }

[workspace.lints.rust]
missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
# TEMP: broken implementation
# https://github.com/rust-lang/rust-clippy/issues/11916
# https://github.com/rust-lang/rust-clippy/issues/14697
# self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"
