[package]
name = "redefmt-args"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
format-string-syn = ["redefmt-args-internal/format-string-syn"]
provided-args = ["redefmt-args-internal/provided-args"]
provided-args-serde = ["redefmt-args-internal/provided-args-serde"]
serde = ["redefmt-args-internal/serde"]

[lints]
workspace = true

[dependencies]
redefmt-args-internal.workspace = true

[dev-dependencies]
