[package]
name = "redefmt-args"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
serde = ["redefmt-args-internal/serde"]

[lints]
workspace = true

[dependencies]
redefmt-args-internal.workspace = true

[dev-dependencies]
