[package]
name = "redefmt-args"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
macros = ["dep:redefmt-args-macros"]
serde = ["redefmt-args-internal/serde"]

[lints]
workspace = true

[dependencies]
redefmt-args-internal.workspace = true

# feature: macros
redefmt-args-macros = { workspace = true, optional = true }

[dev-dependencies]
redefmt-args = { path = ".", features = ["macros"] }

# External
trybuild = "1"
