[package]
name = "redefmt-args-internal"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
quote = ["dep:proc-macro2", "dep:quote"]
serde = ["dep:serde"]
syn = ["dep:syn"]

[lints]
workspace = true

[dependencies]
check_keyword = "0.4"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
thiserror = { version = "2.0", default-features = false }
unicode-xid = "0.2"

# feature: serde
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }

# feature: syn
syn = { version = "2.0", default-features = false, features = ["parsing"], optional = true }

# feature: quote
proc-macro2 = { version = "1.0", default-features = false, optional = true }
quote = { version = "1.0", optional = true }

[dev-dependencies]
redefmt-args-internal = { path = ".", features = ["quote", "serde", "syn"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
