[package]
name = "redefmt-args-internal"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
quote = ["dep:proc-macro2", "dep:quote"]
serde = ["dep:serde"]
syn = ["dep:check_keyword", "dep:proc-macro2", "dep:syn"]

[lints]
workspace = true

[dependencies]
# Internal
redefmt-internal-macros.workspace = true

# External
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
unicode-xid = "0.2"
# TEMP: For quick prototyping, replace with manual implementations before release
impl-tools = "0.10"
sealed = "0.6"

# feature: serde
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }

# feature: syn
check_keyword = { version = "0.4", optional = true }
syn = { version = "2.0", default-features = false, features = ["clone-impls", "derive", "extra-traits", "parsing"], optional = true }

# feature: quote
quote = { version = "1.0", optional = true }

# feature: quote or syn
proc-macro2 = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
# Internal
redefmt-args-internal = { path = ".", features = ["quote", "serde", "syn"] }


# External
num-traits = "0.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
syn = { version = "2.0", default-features = false, features = ["printing"] }
