[package]
name = "redefmt-common"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args.workspace = true

# External
bitflags = "2.9.0"
derive_more = { version = "2.0", features = ["as_ref"] }
