[package]
name = "redefmt-common"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
alloc = []
db = ["dep:rusqlite"]
testing = ["alloc", "dep:bytes", "dep:critical-section"]

[dependencies]
# Internal
redefmt-args.workspace = true

# External
bitflags = "2.9.0"
derive_more = { version = "2.0", features = ["as_ref", "display"] }
strum = { version = "0.27", default-features = false, features = ["derive"] }

# feature: db
rusqlite = { version = "0.35", features = ["bundled"], optional = true }

# feature: testing
bytes = { version = "1.10", default-features = false, optional = true }
critical-section = { version = "1.2", features = ["std"], optional = true }
