[package]
name = "redefmt-core"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
alloc = []
db = ["dep:rusqlite"]
logger = ["dep:critical-section"]
serde = ["dep:serde"]
testing = ["alloc", "dep:bytes"]

[dependencies]
# Internal
redefmt-internal-macros.workspace = true

# External
bitflags = "2.9.0"
derive_more = { version = "2.0", features = ["as_ref", "display"] }
sealed = "0.6"
strum = { version = "0.27", default-features = false, features = ["derive"] }

# feature: logger
critical-section = { version = "1.2", optional = true }

# feature: db
rusqlite = { version = "0.35", features = ["bundled"], optional = true }

# feature: serde
serde = { version = "1.0", features = ["derive"], optional = true }

# feature: testing
bytes = { version = "1.10", default-features = false, optional = true }

[dev-dependencies]
# Internal
redefmt-core = { path = ".", features = ["alloc", "testing"] }

# External
critical-section = { version = "1.2", features = ["std"] }
num-traits = "0.2"
