[package]
name = "redefmt-core"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
deferred = ["dep:bitflags", "dep:strum"]
deferred-alloc = ["deferred"]
deferred-db = ["deferred", "dep:rusqlite"]
deferred-logger = ["deferred", "dep:critical-section"]
deferred-testing = [
  "deferred",
  "deferred-alloc",
  "dep:bytes",
  "dep:critical-section",
]

[dependencies]
# Internal
redefmt-internal-macros.workspace = true

# feature: deferred
bitflags = { version = "2.9.1", optional = true }
# TEMP: prototype dependencies
strum = { version = "0.27", default-features = false, features = ["derive"], optional = true }

# feature: deferred-logger
critical-section = { version = "1.2", optional = true }

# feature: deferred-db
rusqlite = { version = "0.35", features = ["bundled"], optional = true }

# feature: deferred-testing
bytes = { version = "1.10", default-features = false, optional = true }

[dev-dependencies]
# Internal
redefmt-core = { path = ".", features = ["deferred-alloc", "deferred-testing"] }

# External
num-traits = "0.2"
