[package]
name = "redefmt-database"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args.workspace = true
redefmt-common.workspace = true

uuid = { version = "1.16", default-features = false }
