[package]
name = "redefmt-decoder"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args.workspace = true
redefmt-common.workspace = true
redefmt-db.workspace = true

# External
encode_unicode = "1.0"
thiserror = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
redefmt-common = { workspace = true, features = ["testing"] }

num-traits = "0.2"
tempfile = "3.19"
