[package]
name = "redefmt-decoder"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
tokio-decoder = ["dep:tokio-util"]

[dependencies]
# Internal
redefmt-args.workspace = true
redefmt-core = { workspace = true, features = ["deferred"] }
redefmt-db.workspace = true

# External
bytes = { version = "1.10", default-features = false }
elsa = "1.11"
encode_unicode = "1.0"
thiserror = "2.0"

# feature: tokio-decoder
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[dev-dependencies]
redefmt-args = { workspace = true, features = ["macros"] }
redefmt-core = { workspace = true, features = ["base-testing"] }

num-traits = "0.2"
syn = { version = "2.0", default-features = false, features = ["parsing"] }
tempfile = "3.19"
