[package]
name = "redefmt"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
deferred = ["dep:redefmt-core"]
deferred-alloc = ["redefmt-core/alloc"]
deferred-logger = [
  "deferred-macros",
  "redefmt-core/logger",
  "redefmt-macros/logger",
]
deferred-macros = ["deferred", "dep:redefmt-macros"]

[dependencies]
# feature deferred
redefmt-core = { workspace = true, optional = true }

# feature: macros
redefmt-macros = { workspace = true, optional = true }
