[package]
name = "redefmt"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
deferred = ["redefmt-core/deferred"]
deferred-alloc = ["redefmt-core/deferred-alloc"]
deferred-logger = [
  "deferred-macros",
  "redefmt-core/deferred-logger",
  "redefmt-macros/logger",
]
deferred-macros = ["deferred", "dep:redefmt-macros"]

[dependencies]
# feature deferred
redefmt-core = { workspace = true, optional = true }

# feature: macros
redefmt-macros = { workspace = true, optional = true }
