[package]
name = "redefmt-logger"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
alloc = []

[lints]
workspace = true

[dependencies]
redefmt.workspace = true

critical-section = "1.2"

[dev-dependencies]
redefmt = { workspace = true, features = ["testing"] }
redefmt-logger = { path = ".", features = ["alloc"] }
