[package]
name = "redefmt-logger"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
alloc = []

[lints]
workspace = true

[dependencies]
# Internal
redefmt-internal.workspace = true

# External
critical-section = "1.2"

[dev-dependencies]
redefmt-internal = { workspace = true, features = ["testing"] }
redefmt-logger = { path = ".", features = ["alloc"] }
