[package]
name = "redefmt-logger"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
alloc = ["redefmt-internal/alloc"]

[lints]
workspace = true

[dependencies]
# Internal
redefmt-internal.workspace = true
redefmt-macros = { workspace = true, features = ["logger"] }

# External
critical-section = "1.2"

[dev-dependencies]
redefmt = { workspace = true, features = ["macros"] }
redefmt-internal = { workspace = true, features = ["testing"] }
redefmt-logger = { path = ".", features = ["alloc"] }

# External
trybuild = "1"
