[package]
name = "redefmt-macros"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
# Internal
# redefmt-db.workspace = true

# External
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
