[package]
name = "redefmt-macros"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
logger = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args = { workspace = true, features = ["syn"] }
redefmt-core.workspace = true
redefmt-db.workspace = true

# External
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
thiserror = "2.0"
