[package]
name = "redefmt-pretty-printer"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args.workspace = true
redefmt-core = { workspace = true, features = ["deferred"] }
redefmt-decoder.workspace = true

chrono = { version = "0.4.41", default-features = false, features = ["now", "std"] }
thiserror = "2.0"

[dev-dependencies]
redefmt = { workspace = true, features = ["deferred-alloc", "deferred-logger"] }
redefmt-core = { workspace = true, features = ["deferred-testing"] }

# External
critical-section = { version = "1.2", features = ["std"] }
