[package]
name = "redefmt-printer"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args.workspace = true

chrono = { version = "0.4.40", default-features = false, features = ["alloc"] }
