[package]
name = "redefmt-core"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
alloc = []

base-testing = ["alloc", "dep:bytes", "dep:critical-section"]

deferred = ["dep:bitflags", "dep:redefmt-utils-tupler"]
deferred-db = ["deferred", "dep:rusqlite"]
deferred-logger = ["deferred", "dep:critical-section"]
deferred-testing = ["deferred"]

[dependencies]
# feature: base-testing
bytes = { version = "1.10", default-features = false, optional = true }

# feature: deferred
bitflags = { version = "2.9.1", optional = true }
redefmt-utils-tupler = { workspace = true, optional = true }

# feature: deferred-logger
critical-section = { version = "1.2", optional = true }

# feature: deferred-db
rusqlite = { version = "0.35", features = ["bundled"], optional = true }


[dev-dependencies]
# Internal
redefmt-core = { path = ".", features = ["base-testing", "deferred-testing"] }

# External
num-traits = "0.2"
