[package]
name = "redefmt-core"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
alloc = []

db = ["dep:rusqlite"]
testing = ["alloc", "dep:bytes"]

[dependencies]
redefmt-utils-tupler.workspace = true

bitflags = "2.9.1"
critical-section = "1.2"

# feature: db
rusqlite = { version = "0.35", features = ["bundled"], optional = true }

# feature: testing
bytes = { version = "1.10", default-features = false, optional = true }

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }
redefmt-core = { path = ".", features = ["db", "testing"] }

num-traits = "0.2"
