[package]
name = "redefmt-db"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Internal
redefmt-args = { workspace = true, features = ["serde"] }
redefmt-core = { workspace = true, features = ["db"] }

include_dir = "0.7"
rusqlite = { version = "0.35", features = ["bundled", "serde_json"] }
rusqlite_migration = { version = "2.1", features = ["from-directory"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
xdg = "3.0"

[dev-dependencies]
redefmt-args = { workspace = true, features = ["macros"] }
tempfile = "3.19"
