[package]
name = "redefmt-end-to-end"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["deferred"]
deferred = [
  "dep:redefmt-core",
  "dep:redefmt-decoder",
  "dep:redefmt-pretty-printer",
  "redefmt/deferred",
  "redefmt/deferred-alloc",
]
log = ["dep:log", "redefmt/log"]
print = ["redefmt/print"]

[lints]
workspace = true

[dependencies]
redefmt.workspace = true
redefmt-core = { workspace = true, features = ["testing"], optional = true }
redefmt-decoder = { workspace = true, optional = true }
redefmt-pretty-printer = { workspace = true, optional = true }

critical-section = { version = "1.2", features = ["std"] }
log = { version = "0.4", features = ["std"], optional = true }
