[package]
name = "redefmt"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
alloc = ["redefmt-core/alloc"]
std = ["alloc"]

deferred = ["dep:redefmt-macros", "redefmt-core/deferred"]
deferred-logger = ["deferred", "redefmt-core/deferred-logger"]
deferred-logger-macros = ["deferred-logger", "redefmt-macros/logger"]

log-compat = ["dep:log"]
print-compat = ["std"]

[dependencies]
redefmt-core.workspace = true

# feature: deferred
redefmt-macros = { workspace = true, optional = true }

# feature: log-compat
log = { version = "0.4", optional = true }
