[package]
name = "redefmt"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
std = []

deferred = ["dep:redefmt-core", "dep:redefmt-macros"]
deferred-alloc = ["redefmt-core/alloc"]

log-compat = ["dep:log"]
print-compat = ["std"]

[dependencies]
# feature: deferred
redefmt-core = { workspace = true, optional = true }
redefmt-macros = { workspace = true, optional = true }

# feature: log-compat
log = { version = "0.4", optional = true }
