[package]
name = "redefmt-pretty-printer"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
redefmt-args.workspace = true
redefmt-decoder.workspace = true

chrono = { version = "0.4.41", default-features = false, features = ["now", "std"] }
thiserror = "2.0"
